[tool.poetry]
name = "pynenc-mongo"
version = "0.1.0"
description = "MongoDB plugin for Pynenc distributed task management system"
authors = ["Jose Diaz"]
license = "MIT License"
readme = "README.md"
homepage = "https://pynenc.org"
documentation = "https://docs.pynenc.org/plugins/mongo"
repository = "https://github.com/pynenc/pynenc_mongo"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
packages = [{ include = "pynenc_mongo" },]

[tool.poetry.plugins."pynenc.plugins"]
mongo_builder = "pynenc_mongo.builder:MongoBuilderPlugin"
mongo_orchestrator = "pynenc_mongo.orchestrator.mongo_orchestrator"
mongo_state_backend = "pynenc_mongo.state_backend.mongo_state_backend"
mongo_broker = "pynenc_mongo.broker.mongo_broker"
mongo_arg_cache = "pynenc_mongo.arg_cache.mongo_arg_cache"
mongo_trigger = "pynenc_mongo.trigger.mongo_trigger"

[tool.poetry.dependencies]
python = ">=3.11.6,<4.0"
pynenc = { version = "0.1.0rc101.dev95", extras = ["monitor", "tests"], source = "testpypi" }
# pynenc = { path = "../pynenc", extras = ["monitor", "tests"] }
pymongo = "~3.12.2"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "23.11.0"
pytest = ">=8.2.0"
pytest-asyncio = "^0.25.3"
pytest-timeout = "^2.2.0"
coverage = { version = ">=7.2.6,<8.0", extras = ["toml"] }
mypy = "1.7.0"
pre-commit = "^3.5.0"
types-requests = "^2.32.0.20250602"
testcontainers = {extras = ["mongodb"], version = "^4.13.0"}
mongomock = "^4.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
myst-parser = "^2"
furo = "^2023"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-autodoc2 = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
required-version = '23.11.0'
exclude = '''
/(
    \.mypy_cache
    | \.env
    | \.venv
)/
'''


# [tool.flake8]
# max-line-length = 88
# exclude = [".venv", ".env", ".eggs"]
# ignore = [
#     "E203",  # Whitespace before ':' (conflicts with black)
#     "W503",  # Line break before binary operator (conflicts with black)
# ]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort # using isort for now
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    # "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    # "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["F403"]

[tool.mypy]
files = ["pynenc_mongodb"]
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = 'venv,env'
show_error_codes = true
pretty = true
allow_redefinition = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
log_cli = true
filterwarnings = [
    "ignore:Running in a secondary thread. Signal handling will be skipped.:UserWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
timeout = 30

[tool.coverage.run]
omit = [
    "tests/*",  # Exclude all files in the tests directory
]
relative_files = true # to combine coverage data from multiple processes

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "^\\s*\\.\\.\\.\\s*$",  # ... ellipsis
    "if __name__ == .__main__.:",
]
